# Bachelor-Work

./: .gitignore  Notes.txt  README.md  Rules.txt
Latex/: Notes.dvi  Notes.fdb_latexmk  Notes.fls  Notes.tex  projekt.aux  projekt.blg  projekt.fdb_latexmk  projekt.fls  projekt.lof  projekt.out  projekt.ptc  projekt.tex  projekt.toc
src/Game/Duke/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Game/DukeGame/: CMakeLists.txt  CMakeLists.txt.hizBSP  TODO  cell.cpp  cell.h  connectionmanager.cpp  connectionmanager.h  enums.h  figure.cpp  figure.h  figurebag.cpp  figurebag.h  gameconfigure.cpp  gameconfigure.h  gameinterface.cpp  gameinterface.h  gamelogic.cpp  gamelogic.h  main.cpp  mainwindow.cpp  mainwindow.h  movevalidator.cpp  movevalidator.h  p_assassin.cpp  p_assassin.h  p_bowman.cpp  p_bowman.h  p_champion.cpp  p_champion.h  p_dracoon.cpp  p_dracoon.h  p_duke.cpp  p_duke.h  p_footman.cpp  p_footman.h  p_general.cpp  p_general.h  p_knight.cpp  p_knight.h  p_longbowman.cpp  (+13 more)
src/Game/DukeGame/Algorithms/: FinalMove.h  expectiminimax.h
src/Game/DukeGame/Algorithms/ExpMinMax/: expectiminimax.cpp  expectiminimax.h
src/Game/DukeGame/Algorithms/MCTS/: Action.h  mctsnode.cpp  mctsnode.h
src/Game/DukeGame/Game/: cellinfo.cpp  cellinfo.h  connectionmanager.cpp  connectionmanager.h  debugmanager.cpp  debugmanager.h  enums.h  figure.cpp  figure.h  figurebag.cpp  figurebag.h  gameconfigure.cpp  gameconfigure.h  gameinterface.h  gamelogic.cpp  gamelogic.h  mainwindow.cpp  mainwindow.h  movesimulator.cpp  movesimulator.h  p_assassin.cpp  p_assassin.h  p_bowman.cpp  p_bowman.h  p_champion.cpp  p_champion.h  p_dracoon.cpp  p_dracoon.h  p_duke.cpp  p_duke.h  p_footman.cpp  p_footman.h  p_general.cpp  p_general.h  p_knight.cpp  p_knight.h  p_longbowman.cpp  p_longbowman.h  p_marshall.cpp  p_marshall.h  (+8 more)
src/Game/DukeGame/Game/GameComponents/: GameState.h  GameStatus.h  cell.cpp  cell.h  figurebag.cpp  figurebag.h  gameconfigure.cpp  gameconfigure.h  player.cpp  player.h
src/Game/DukeGame/Game/GameComponents/Figures/: figure.cpp  figure.h  p_assassin.cpp  p_assassin.h  p_bowman.cpp  p_bowman.h  p_champion.cpp  p_champion.h  p_dracoon.cpp  p_dracoon.h  p_duke.cpp  p_duke.h  p_footman.cpp  p_footman.h  p_general.cpp  p_general.h  p_knight.cpp  p_knight.h  p_longbowman.cpp  p_longbowman.h  p_marshall.cpp  p_marshall.h  p_pikeman.cpp  p_pikeman.h  p_priest.cpp  p_priest.h  p_seer.cpp  p_seer.h  p_wizard.cpp  p_wizard.h
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-607b5cf27994070478a7.json  cmakeFiles-v1-0fe01d425921139b2770.json  codemodel-v2-2388928bdaf0b2cd7e48.json  codemodel-v2-8f6471df157940d467e2.json  codemodel-v2-b93353cd5e14f68c00b9.json  directory-.-Debug-9737074732e01c7ee59f.json  directory-.-Debug-a2b1e24b3fdd1326afd1.json  directory-.-Debug-e644bde16b9ed15b6bf7.json  index-2023-12-02T20-27-05-0736.json  index-2023-12-04T19-53-44-0400.json  index-2023-12-06T08-46-28-0974.json  index-2023-12-06T15-38-09-0371.json  target-DukeGame-Debug-0320b77ac3cabff77891.json  target-DukeGame-Debug-7a9cdfb7079f4c6e8076.json  target-DukeGame-Debug-7b01bde58176ad78b89a.json  target-DukeGame-Debug-8c8ff021f04614b41075.json
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-3b81db53bcf00f06489b.json  codemodel-v2-3e8b54be1799c68622ea.json  codemodel-v2-5388537393058204c9f8.json  codemodel-v2-d83d14138f8d550a160a.json  directory-.-Debug-774b008382b266d1fa66.json  directory-.-Debug-7a310015ce0594fb2d3c.json  index-2023-12-02T20-18-14-0077.json  index-2023-12-04T19-26-52-0880.json  index-2023-12-06T14-21-10-0192.json  target-DukeGame-Debug-41320da9e85392259e72.json  target-DukeGame-Debug-6fe6c8377e918a325f0b.json  target-DukeGame-Debug-b87b0001dca40967d35a.json  target-DukeGame_autogen-Debug-37cb20cc2325d0d30da5.json  target-DukeGame_autogen_timestamp_deps-Debug-eceef361d8d174f2ebec.json
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QRandomGenerator.FE7190667D93103C.idx  buttonconnectionmanager.cpp.3F368E93C2F9219C.idx  buttonconnectionmanager.h.D769EC07699D07D5.idx  cell.cpp.DF7D93EA4ACFA770.idx  cell.h.FC049B2D4F33BFC5.idx  connectionmanager.cpp.7239B7A550D3A8D1.idx  connectionmanager.h.2C1341EDE7BCFBF1.idx  connectionsclass.cpp.E51F366A7F3387AE.idx  connectionsclass.h.A2834477987428A9.idx  cstring.CFC782476C867C15.idx  dracoon.cpp.EBC7C89CB59381A2.idx  dracoon.h.9533CA9A238F47DF.idx  enums.h.A4F5FFA5A7BEEB38.idx  figure.cpp.191D1D15833CECF2.idx  figure.h.1A273C2C1C364EC7.idx  figurebag.cpp.6003C91EB836708E.idx  figurebag.h.576C3A70ACDD08FD.idx  figuresEnum.h.D0562FE012589E2D.idx  gameconfigure.cpp.8E0E873B62DD6E85.idx  gameconfigure.h.E71A1DB909F06B96.idx  (+61 more)
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/DukeGame_autogen/: deps  mocs_compilation.cpp
src/Game/build-DukeGame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/DukeGame_autogen/EWIEGA46WW/: moc_cell.cpp  moc_cell.cpp.d  moc_connectionmanager.cpp  moc_connectionmanager.cpp.d  moc_figure.cpp  moc_figure.cpp.d  moc_gameinterface.cpp  moc_gameinterface.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_p_assassin.cpp  moc_p_assassin.cpp.d  moc_p_bowman.cpp  moc_p_bowman.cpp.d  moc_p_champion.cpp  moc_p_champion.cpp.d  moc_p_dracoon.cpp  moc_p_dracoon.cpp.d  moc_p_duke.cpp  moc_p_duke.cpp.d  moc_p_footman.cpp  moc_p_footman.cpp.d  moc_p_general.cpp  moc_p_general.cpp.d  moc_p_knight.cpp  moc_p_knight.cpp.d  moc_p_longbowman.cpp  moc_p_longbowman.cpp.d  moc_p_marshall.cpp  moc_p_marshall.cpp.d  moc_p_pikeman.cpp  moc_p_pikeman.cpp.d  moc_p_priest.cpp  moc_p_priest.cpp.d  moc_p_seer.cpp  moc_p_seer.cpp.d  moc_p_wizard.cpp  moc_p_wizard.cpp.d  moc_player.cpp  moc_player.cpp.d
